fix: prevent cutting off overlay

--- a/css/style.css
+++ b/css/style.css
@@ -198,7 +198,8 @@
 }
 
 #stylePreviewOverlay {
-    display: none;
+    opacity: 0;
+    pointer-events: none;
     width: 128px;
     height: 128px;
     position: fixed;
@@ -208,6 +209,12 @@
     transform: translate(-140px, 20px);
     background-size: cover;
     background-position: center;
+    background-color: rgba(0, 0, 0, 0.3);
     border-radius: 5px;
     z-index: 100;
+    transition: transform 0.1s ease, opacity 0.3s ease;
+}
+
+#stylePreviewOverlay.lower-half {
+    transform: translate(-140px, -140px);
 }
